# SVM

./: Cargo.toml
src/: kernel.rs  main.rs  plot.rs  soft.rs
