[package]
name = "svm"
version = "0.1.0"
authors = ["Nir Shahar <nirshahar@mail.tau.ac.il>", "Noam Raz <noamraz8@gmail.com>", "Eyal Nesher <eyal.nesher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
rand_distr = "0.4.0"
rand = "0.8.3"
svg = "0.9.0"
